; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/audio-monitoring/pulse/extr_pulseaudio-output.c_process_short.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/audio-monitoring/pulse/extr_pulseaudio-output.c_process_short.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i64, float)* @process_short to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_short(i8* %0, i64 %1, i64 %2, float %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca float, align 4
  %9 = alloca i16*, align 8
  %10 = alloca i16*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store float %3, float* %8, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to i16*
  store i16* %12, i16** %9, align 8
  %13 = load i16*, i16** %9, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* %7, align 8
  %16 = mul i64 %14, %15
  %17 = getelementptr inbounds i16, i16* %13, i64 %16
  store i16* %17, i16** %10, align 8
  br label %18

18:                                               ; preds = %22, %4
  %19 = load i16*, i16** %9, align 8
  %20 = load i16*, i16** %10, align 8
  %21 = icmp ult i16* %19, %20
  br i1 %21, label %22, label %30

22:                                               ; preds = %18
  %23 = load float, float* %8, align 4
  %24 = load i16*, i16** %9, align 8
  %25 = getelementptr inbounds i16, i16* %24, i32 1
  store i16* %25, i16** %9, align 8
  %26 = load i16, i16* %24, align 2
  %27 = sitofp i16 %26 to float
  %28 = fmul float %27, %23
  %29 = fptosi float %28 to i16
  store i16 %29, i16* %24, align 2
  br label %18

30:                                               ; preds = %18
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
